# termweave

./: .gitattributes  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.config.json  eslint.config.js  index.html  install.sh  package.json  tsconfig.json  vite.config.ts
.github/workflows/: check.yml
scripts/: build-app.ts  install-project.ts  project.ts  sync-app-config.ts  update-dependencies.ts
sdk/: .gitignore  .prettierignore  .termweave-sdk.json  app.config.json  index.html  install.sh  package.json  vite.config.ts
sdk/scripts/: generate-icons.ts  install-project.ts  kill-bun-processes.ts  managed-package.ts  project.ts  sync-app-config.ts  update-dependencies.ts
sdk/shared/: terminal-config.ts  terminal-protocol.ts
sdk/sidecar/: eslint.config.js  package.json  tsconfig.json
sdk/sidecar/scripts/: build.ts  dev-launcher.ts
sdk/sidecar/sdk/: package.json
sdk/sidecar/sdk/src/: PixelRenderer.tsx  assets.d.ts  index.ts  runtime-config.ts
sdk/sidecar/src/: App.tsx  index.tsx  routes.ts
sdk/src/: diagnostics.ts  main.ts  styles.css
sdk/src-tauri/: Cargo.toml  tauri.conf.json
sdk/src-tauri/capabilities/: default.json
sdk/templates/project/: .prettierignore  eslint.config.js  package.json
shared/: terminal-config.ts
sidecar/: package.json
sidecar/scripts/: build-dev-launcher.ts
sidecar/src/: App.tsx  index.tsx
src/: diagnostics.ts  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
templates/project/: package.json  tsconfig.json
(+5 files in other folders)
