[package]
name = "termweave"
version = "0.1.0"
description = "A config-driven Tauri and OpenTUI builder for native desktop terminal apps."
authors = ["Nik Delvin"]
license = "MIT"
homepage = "https://github.com/nikdelvin/termweave"
repository = "https://github.com/nikdelvin/termweave"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "termweave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
getrandom = "=0.3.4"
tauri = { version = "=2.11.5", features = [] }
serde = { version = "=1.0.228", features = ["derive"] }
tauri-plugin-shell = "=2.3.5"
